Denora Version 1.4.0-SVN
------------------------
Provided by Denora Team <dev@denorastats.org> - 2008
04/28 F Improved inspircd FJOIN/FMODE support                     [ #00]
04/28 A Improved channel TS support                               [ #00]
02/29 F Fixed possible segfault on restart                        [ #00]
02/29 F Fixed MODE not handled correctly in inspircd11            [ #00]
02/28 A Chan messages from excluded users now counted globally    [ #00]
02/27 F Fixed segfault on certain inspircd11 FMODE events         [#485]
02/26 F Fixed inspircd11 +j/+J mode data not written to sql       [ #00]
02/26 F Fixed crash on truncated inspircd11 PUSH message          [#489]
02/17 F Added missing user modes to UltimateIRCd                  [#488]

Provided by Jobe <jobe@mdbnet.co.uk>
04/28 F Fixed not updating p10 vhost in sql in some cases         [#501] 
04/22 F Fix persistent channels getting deleted on last user part [#493]
04/22 F Fixes to server squit routine                     [#481,482,486]

Provided by Kein <kein-of@yandex.ru>
04/22 U Updated Russian language file                             [ #00]


Denora Version 1.4.0-RC2
------------------------
Provided by Denora Team <dev@denorastats.org> - 2008
01/11 A Detection of Windows Vista and Windows Server 2008        [ #00]
01/10 A Added persistent channel mode support for nefarious       [#466]
01/09 U Updated GeoIP.dat                                         [ #00]
01/28 F Fixed sphtml setting not applying for inactive channels   [#473]
01/27 F Write pid file before loading flatfile db files           [#469]
01/27 F Fixed wrong wrong ping value stored for juped servers     [ #00]
01/27 F Fixed slink array not cleaned in uplink struct on squit   [#461]
01/23 F Fixed memory leak in ss_exclude                           [#480]
01/23 F Fixed kill handling on P10 ircds                          [#479]
01/23 F Fixed incorrect non-western characters in html output     [#462]